IngressAndRestrictionPod/RestrictPod/RestrictPolicy3/Pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    role: trusted 
spec:
  containers:
  - name: nginx1
    image: nginx
    ports:
    - containerPort: 80
