IngressAndRestrictionPod/RestrictPod/RestrictPolicy3/Pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
  - name: nginx2
    image: nginx
    ports:
    - containerPort: 80
